# ultimate-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MakeFile  README.md  docker-compose.yml  main.py  mypy.ini  processors.py  pyproject.toml  start.sh  test.py
docker_setup/: twitter_simulator.py
stream_processor/common/: config.py  udfs.py  utils.py
stream_processor/processor/: abstract_stream_processor.py  twitter_stream_processor.py
stream_processor/sources/: abstract_source.py  abstract_stream_processor.py  twitter_source.py  twitter_stream_processor.py
test/: conftest.py
test/common/: test_udfs.py
test/sources/: test_twitter_source.py
tests/: conftest.py
tests/common/: test_udfs.py  test_utils.py
tests/processor/: test_twitter_stream_processor.py
tests/sources/: test_twitter_stream_processor.py
