[tool.poetry]
name            = "ultimate-ai-challenge"
version         = "0.1.0"
description     = "Spark streaming application to process events from various sources with enriched info on coronavirus"
readme          = "README.md"
authors         = ["prasanna.sudhindrakumar@gmail.com"]

[tool.poetry.dependencies]
python          = "^3.8"
pip             = "^21.0.1"
pyspark         = "3.0.2"
beautifulsoup4  = "4.9.3"
requests        = "2.25.1"
pyspark-stubs   = "3.0.0.post1"
pymemcache      = "^3.4.4"

[tool.poetry.dev-dependencies]
black           = "^20.8b1"
isort           = "^5.7.0"
mypy            = "^0.812"
pre-commit      = "^2.10.1"
pytest          = "^6.2.2"
pytest-mock     = "^3.5.1"
pytest-cov      = "^2.11.1"

[tool.isort]
profile                 = "black"
force_single_line       = false
atomic                  = true
include_trailing_comma  = true
lines_after_imports     = 2
lines_between_types     = 1
use_parentheses         = true
src_paths               = ["kafka_utilis", "tests"]
skip_glob               = []
filter_files            = true
known_first_party       = "kafka_utilis"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.json
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
